feat: add auth guard in FE side
